# Ytani_NeoPixel

./: .gitignore  LICENSE  README.html  README.md  entry_points.cfg  install.sh  requirements.txt  setup.cfg  ytNeoPixel.src  ytani-neopixel.src
ATTiny85/: README.md
ATTiny85/LedTimer/: README.md
ATTiny85/color_wave/: Ytani_NeoPixel.h
ArduinoMicro/switch3/: ModeBase.h  common.cpp  common.h
ArduinoMicro/test1/: Button.cpp
BootLoader/: README.md
BootLoader/BootLoader_ATmega32U4/: bootloader1.brd  bootloader1.pro  bootloader1.sch
BootLoader/BootLoader_ArduinoMicro/: bootloader1.brd  bootloader1.sch
M5StampPico/sensor-NeoPixel-simple1/: PressureSensor.cpp  Ytani_NeoPixel.h  sensor-NeoPixel-simple1.ino
M5StampPico/sensor-NeoPixel1/: PressureSensor.cpp  Ytani_NeoPixel.h
arduino-etc/ATTiny85/: ATTIny-pin.jpg:Zone.Identifier  ATTIny-pinout.jpg:Zone.Identifier  tiny45.pdf:Zone.Identifier
arduino-etc/pcb/: README.html  README.md
docs/: tiny85_02.png:Zone.Identifier
examples/: 10-random1.py  robot_eye1.py  test1.py  test2.py
rpi-python3/: README.md  install.sh  ytani-neopixel.src
rpi-python3/examples/: 01-simple1.py
rpi-python3/ytani_neopixel/: __init__.py  __main__.py  robot_eyes_7leds.py  ytani_neopixel.py
test/: strandtest2.py  test1.py
tests/color_wave3/: Ytani_NeoPixel.h
tests/touch1/: touch1.ino
yt_neopixel/: __init__.py  __main__.py  mod1.py  yt_neopixel.py
ytani_neopixel/: __init__.py  __main__.py  __main__.py~  flycheck___init__.py  robot_eye.py  robot_eyes_7leds.py  ytani_neopixel.py  ytani_neopixel.py~
(+180 files in other folders)
