[metadata]
name = yt_neopixel
version = attr: yt_neopixel.__version__
author = Yoichi Tanibayashi
author_email = yoichi@tanibayashi.jp
description = yt_neopixel: NeoPixel Library for Raspberry Pi and Python3
long_description = file: README.md
url = https://github.com/ytani01/ytNeoPixelPi.git
license = MIT
classifier =
    Programming Language :: Python
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    
[options]
zip_safe = False
packages = find:
install_requires =
    click
    rpi_ws281x
entry_points = file: entry_points.cfg
