[metadata]
name = ytani_neopixel
version = attr: ytani_neopixel.__version__
author = Yoichi Tanibayashi
author_email = yoichi@tanibayashi.jp
description = ytani_neopixel: NeoPixel Library for Python3 on Raspberry Pi
long_description = file: README.md
url = https://github.com/ytani01/Ytani_NeoPixel.git
license = MIT
classifier =
    Programming Language :: Python
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    
[options]
zip_safe = False
packages = find:
install_requires =
    click
    rpi_ws281x
entry_points = file: entry_points.cfg
